<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Compare Movies</string>
    <string name="search_for_results_text">Search for actors and movies and see what they have in common.</string>
    <string name="select_results_text">Please select two results to compare.</string>
    <string name="imdb_statement">Filmography links and data courtesy of IMDb</string>
    <string name="hello_results">Search Results</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_query_results">Search Results</string>
    <string name="url_tag">0</string>
    <string name="type_tag">1</string>
    <string name="compare_button">Compare</string>
    <string name="type_actor">Actor</string>
    <string name="search_label_1">Search 1</string>
    <string name="search_label_2">Search 2</string>
    <string name="title_activity_compare_results">Comparison Results</string>
    <string name="title_activity_select_results">Select Results</string>
    <string name="compare_results_heading"></string>
    <string name="input_field_1_label">Name 1 </string>
    <string name="input_field_2_label">Name 2 </string>
    <string name="no_query_results_text">No results were found. </string>
    <string name="toolbar_results_found"> Results Found</string>
    <string name="toolbar_result_found"> Result Found</string>
    <string name="searching_for_results_dialogue">Searching...</string>
    <string name="loading_results_dialogue">Comparing Profiles... </string>
    <string name="no_results_found_text">Comparison Completed. No common titles were found. </string>
    <string name="results_count_start_text">Comparison completed, </string>
    <string name="results_count_end_text"> titles found:</string>
    <string name="cannot_connect_title"> Unable to Complete Comparison</string>
    <string name="cannot_connect_message">The comparison was unable to complete at this time, due to a network connection issue. Please try again later. </string>
    <string name="cannot_connect_button"> OK</string>
    <string name="find_button_text"> </string>
    <string name="about_menu_title">About</string>
    <string name="cache_menu_title">History Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_cache_button_title">Clear History</string>
    <string name="clear_cache_button_key">Clear the History</string>
    <string name="about_message">Movie Finder v1.1  \n       by \n   John Crawley</string>

    <string name="about_dialogue_ok_button">OK</string>
    <string name="new_search_button">New Search</string>
    <string name="cache_cleared_toast_message">History deleted.</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="network_unavailable">Unable to reach the server, please check your network connection.</string>
    <string name="server_unavailable">Sorry, unable to connect to the server at this time.</string>
<!--    <string name="site_url">www.imdb.com</string> -->
    <string name="results_found">results found:</string>
    <string name="one_result_found">1 result found:</string>
    <string name="no_results_found"> No results were found.</string>
    <string name="comparison_completed">Comparison completed. </string>
    <string name="worked_on">" worked on this title as: "</string>
    <string name="error_getting_results">There was a problem retrieving the results</string>

    <string name="menu_item_title">title</string>
    <string name="url_prefix">https://m.imdb.com/find?q=</string>
    <string name="url_suffix"></string>

</resources>
